criei a página de animes e coloquei os img pra fazer carrosseis

--- a/index.html
+++ b/index.html
@@ -7,12 +7,76 @@
     <link rel="shortcut icon" href="favicons/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>ESSA É MINHA LISTA DE LINKS</h1>
-    <h2>ANIMES</h2>
-    <h2>MANGÁS</h2>
-    <h2>SÉRIES</h2>
-    <h2>FILMES</h2>
 
+<body>
+
+    <main>
+
+        <h1>ESSA É MINHA LISTA DE LINKS</h1>
+
+        <section>
+            <h2>
+                <a href="animes-page.html">ANIMES</a>
+            </h2>
+            <div class="carrossel">
+                <div class="carrossel-imagens">
+                    <img src="imagens/img-animes/essa-e-a-thumb-principal.png" alt="imagem1">
+                    <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="imagem2">
+                    <img src="imagens/img-animes/time-7.png" alt="imagem3">
+                    <img src="imagens/img-animes/yu-yu-hakusho.png" alt="imagem4">
+                    <img src="imagens/img-animes/noragami.webp" alt="imagem5">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>
+                <a href="mangas-page.html">MANGÁS</a>
+            </h2>
+            <div>
+                <div>
+                    <img src="imagens/img-mangas/one-piece-manga.png" alt="imagem6">
+                    <img src="imagens/img-mangas/gotenks.png" alt="imagem7">
+                    <img src="imagens/img-mangas/bleach.png" alt="imagem8">
+                    <img src="imagens/img-mangas/" alt="imagem9">
+                    <img src="" alt="imagem10">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2>
+                <a href="series-page.html">SÉRIES</a>
+            </h2>
+            <div>
+                <div>
+                    <img src="imagens/img-series/" alt="imagem11">
+                    <img src="imagens/img-series/" alt="imagem12">
+                    <img src="imagens/img-series/" alt="imagem13">
+                    <img src="imagens/img-series/" alt="imagem14">
+                    <img src="imagens/img-series/" alt="imagem15">
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>
+                <a href="filmes-page.html">FILMES</a>
+            </h2>
+                <div class="carrossel">
+                    <div class="carrossel-imagens">
+                        <img src="imagens/img-filmes/" alt="imagem16">
+                        <img src="imagens/img-filmes/" alt="imagem17">
+                        <img src="imagens/img-filmes/" alt="imagem18">
+                        <img src="imagens/img-filmes/" alt="imagem19">
+                        <img src="imagens/img-filmes/" alt="imagem20">
+                    </div>
+                </div>
+        </section>
+
+    </main>
+
+<footer>
+
+</footer>
 </body>
 </html>
