criei os carrosseis e comecei o rodapé

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="imagem2">
                     <img src="imagens/img-animes/time-7.png" alt="imagem3">
                     <img src="imagens/img-animes/yu-yu-hakusho.png" alt="imagem4">
-                    <img src="imagens/img-animes/noragami.webp" alt="imagem5">
+                    <img src="imagens/img-animes/noragami.png" alt="imagem5">
+                    <img src="imagens/img-animes/essa-e-a-thumb-principal.png" alt="imagem1">
                 </div>
             </div>
         </section>
@@ -33,13 +34,14 @@
             <h2>
                 <a href="mangas-page.html">MANGÁS</a>
             </h2>
-            <div>
-                <div>
+            <div class="carrossel-manga">
+                <div class="carrossel-manga-imagens">
                     <img src="imagens/img-mangas/one-piece-manga.png" alt="imagem6">
                     <img src="imagens/img-mangas/gotenks.png" alt="imagem7">
                     <img src="imagens/img-mangas/bleach.png" alt="imagem8">
-                    <img src="imagens/img-mangas/" alt="imagem9">
-                    <img src="" alt="imagem10">
+                    <img src="imagens/img-mangas/Solo-Leveling-Ragnarok.png" alt="imagem9">
+                    <img src="imagens/img-mangas/naruto-capa.png" alt="imagem10">
+                    <img src="imagens/img-mangas/one-piece-manga.png" alt="imagem6">
                 </div>
             </div>
         </section>
@@ -48,13 +50,14 @@
             <h2>
                 <a href="series-page.html">SÉRIES</a>
             </h2>
-            <div>
-                <div>
-                    <img src="imagens/img-series/" alt="imagem11">
-                    <img src="imagens/img-series/" alt="imagem12">
-                    <img src="imagens/img-series/" alt="imagem13">
-                    <img src="imagens/img-series/" alt="imagem14">
-                    <img src="imagens/img-series/" alt="imagem15">
+            <div class="carrossel">
+                <div class="carrossel-imagens">
+                    <img src="imagens/img-series/loki-serie-2.png" alt="imagem11">
+                    <img src="imagens/img-series/lucifer-netflix.png" alt="imagem12">
+                    <img src="imagens/img-series/squid-game-tv-series-weapon-netflix-hd-wallpaper-preview.webp" alt="imagem13">
+                    <img src="imagens/img-series/skyrim.png" alt="imagem14">
+                    <img src="imagens/img-series/la-casa-de-papel.png" alt="imagem15">
+                    <img src="imagens/img-series/loki-serie-2.png" alt="imagem11">
                 </div>
             </div>
         </section>
@@ -62,21 +65,29 @@
             <h2>
                 <a href="filmes-page.html">FILMES</a>
             </h2>
-                <div class="carrossel">
-                    <div class="carrossel-imagens">
-                        <img src="imagens/img-filmes/" alt="imagem16">
-                        <img src="imagens/img-filmes/" alt="imagem17">
-                        <img src="imagens/img-filmes/" alt="imagem18">
-                        <img src="imagens/img-filmes/" alt="imagem19">
-                        <img src="imagens/img-filmes/" alt="imagem20">
-                    </div>
+            <div class="carrossel">
+                <div class="carrossel-imagens">
+                    <img src="imagens/img-filmes/velozes-e-furiosos.png" alt="imagem16">
+                    <img src="imagens/img-filmes/kung-fu-panda.png" alt="imagem17">
+                    <img src="imagens/img-filmes/alerta-vermelho.png" alt="imagem18">
+                    <img src="imagens/img-filmes/spiderman3.png" alt="imagem19">
+                    <img src="imagens/img-filmes/it_capitulo_dois.png" alt="imagem20">
+                    <img src="imagens/img-filmes/velozes-e-furiosos.png" alt="imagem16">
                 </div>
+            </div>
         </section>
 
     </main>
 
 <footer>
-
+    <p>
+        &copy Copyright 2024|Todos os Direitos Reservados a Kaích Costa
+    </p>
+    <a href="https://github.com/KaichCosta">GitHub</a>
+    <p>
+        Tem alguma sugestão de alteração ou adição? Fale comigo pelo insta<a href="https://www.instagram.com/kaichcosta_07/">Kaích Costa</a>
+        <i></i>
+    </p>
 </footer>
 </body>
 </html>
