configurei as caixas de imagens e implementei os links simples e imagens

--- a/animes-page.html
+++ b/animes-page.html
@@ -7,7 +7,53 @@
     <link rel="shortcut icon" href="favicons/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="animes-page">
+    <!--Oshi no ko v
+    shinjou saikyou no denshi kenichi v
+    katekyo hitman reborn v
+    shangri-la
+    Kage no Jitsuryokusha ni Naritakute! 2nd Season
+    kuroko no basket
+    haikyuu
+    vinland saga-->
     
+    <div class="gallery-container">
+        <div class="gallery-item">
+            <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="Imagem 1">
+            <div class="info">
+                <h3>Oshi no ko Tmporada 1</h3>
+                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2">Anitube(Legendado)</a>
+                <br>
+                <a href="https://rine.cloud/anime/oshi-no-ko/">Rine.Cloud(Legendado)</a>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="imagens/img-animes/kenichi.webp" alt="Imagem 2">
+            <div class="info">
+                <h3>Shijou Saikyou no Deshi Kenichi <h3>
+                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi">Anitube(Legendado Completo)</a>
+                <a href="https://www.anitube.us/animes-dublado/shijou-saikyou-no-deshi-kenichi-dublado">Anitube (Dublado)</a>
+                <br>
+                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/">Rine.Cloud(Dublado)</a>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="imagens/img-animes/katekyo hitman.webp" alt="Imagem 3">
+            <div class="info">
+                <h3>Katekyo Hitman Reborn</h3>
+                <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/">Rine.Cloud(Dublado)</a>
+                <br>
+                <a href="https://subanimes.net/anime/katekyo-hitman-reborn-temporada-1/">Subanimes(Legendado)</a>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="https://via.placeholder.com/300x170" alt="Imagem 4">
+            <div class="info">
+                <h3>Título do vídeo 4</h3>
+                <p>Descrição curta ou nome do canal</p>
+            </div>
+        </div>
+        <!-- Adicione mais itens conforme necessário -->
+    </div>
 </body>
 </html>
