--- a/animes-page.html
+++ b/animes-page.html
@@ -22,35 +22,44 @@
             <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="Imagem 1">
             <div class="info">
                 <h3>Oshi no ko Tmporada 1</h3>
-                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2">Anitube(Legendado)</a>
+                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2" target="_blank">Anitube(Legendado)</a>
                 <br>
-                <a href="https://rine.cloud/anime/oshi-no-ko/">Rine.Cloud(Legendado)</a>
+                <a href="https://rine.cloud/anime/oshi-no-ko/" target="_blank">Rine.Cloud(Legendado)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/kenichi.webp" alt="Imagem 2">
             <div class="info">
                 <h3>Shijou Saikyou no Deshi Kenichi <h3>
-                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi">Anitube(Legendado Completo)</a>
-                <a href="https://www.anitube.us/animes-dublado/shijou-saikyou-no-deshi-kenichi-dublado">Anitube (Dublado)</a>
+                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank">Anitube(Legendado Completo)</a>
+                <a href="https://www.anitube.us/animes-dublado/shijou-saikyou-no-deshi-kenichi-dublado" target="_blank">Anitube (Dublado)</a>
                 <br>
-                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/">Rine.Cloud(Dublado)</a>
+                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/" target="_blank">Rine.Cloud(Dublado)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/katekyo hitman.webp" alt="Imagem 3">
             <div class="info">
                 <h3>Katekyo Hitman Reborn</h3>
-                <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/">Rine.Cloud(Dublado)</a>
+                <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/" target="_blank">Rine.Cloud(Dublado)</a>
                 <br>
-                <a href="https://subanimes.net/anime/katekyo-hitman-reborn-temporada-1/">Subanimes(Legendado)</a>
+                <a href="https://www.anroll.net/a/JCxDZ7q4SO" target="_blank">AnimesROLL(Legendado Completo)</a>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="https://via.placeholder.com/300x170" alt="Imagem 4">
+            <img src="imagens/img-animes/vinland-saga01.webp" alt="Imagem 4">
             <div class="info">
-                <h3>Título do vídeo 4</h3>
-                <p>Descrição curta ou nome do canal</p>
+                <h3>Vinland Saga Temporada 1</h3>
+                <a href="https://www.anroll.net/a/UEOIWUExzW" target="_blank">AnimesROLL(Legendado)</a>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="imagens/img-animes/vinland-saga-2-temporada.webp" alt="imagem 5">
+            <div class="info">
+                <h3>Vinland Saga Temporada 2</h3>   
+                <a href="https://www.anroll.net/a/qjNPqmFXES" target="_blank">AnimesROLL(Dublado)</a>
+                <br>
+                <a href="https://www.anroll.net/a/Md5wH2ONKP" target="_blank">AnimesROLL(Legendado)</a> 
             </div>
         </div>
         <!-- Adicione mais itens conforme necessário -->
