tentei muito ajustar as colunos do animes page

--- a/animes-page.html
+++ b/animes-page.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="gallery-item">
-            <img src="imagens/img-animes/kenichi.webp" alt="Imagem 2">
+            <img src="imagens/img-animes/kenichi.png" alt="Imagem 2">
             <div class="info">
                 <h3>Shijou Saikyou no Deshi Kenichi <h3>
                 <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank">Anitube(Legendado Completo)</a>
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="gallery-item">
-            <img src="imagens/img-animes/katekyo hitman.webp" alt="Imagem 3">
+            <img src="imagens/img-animes/katekyo hitman.png" alt="Imagem 3">
             <div class="info">
                 <h3>Katekyo Hitman Reborn</h3>
                 <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/" target="_blank">Rine.Cloud(Dublado)</a>
@@ -47,14 +47,14 @@
             </div>
         </div>
         <div class="gallery-item">
-            <img src="imagens/img-animes/vinland-saga01.webp" alt="Imagem 4">
+            <img src="imagens/img-animes/vinland-saga01.png" alt="Imagem 4">
             <div class="info">
                 <h3>Vinland Saga Temporada 1</h3>
                 <a href="https://www.anroll.net/a/UEOIWUExzW" target="_blank">AnimesROLL(Legendado)</a>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="imagens/img-animes/vinland-saga-2-temporada.webp" alt="imagem 5">
+            <img src="imagens/img-animes/vinland-saga-2-temporada.png" alt="imagem 5">
             <div class="info">
                 <h3>Vinland Saga Temporada 2</h3>   
                 <a href="https://www.anroll.net/a/qjNPqmFXES" target="_blank">AnimesROLL(Dublado)</a>
