--- a/animes-page.html
+++ b/animes-page.html
@@ -15,54 +15,52 @@
     Kage no Jitsuryokusha ni Naritakute! 2nd Season
     kuroko no basket
     haikyuu
-    vinland saga-->
+    vinland saga v-->
     
     <div class="gallery-container">
         <div class="gallery-item">
             <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="Imagem 1">
-            <div class="info">
+            <div class="descricao">
                 <h3>Oshi no ko Tmporada 1</h3>
-                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2" target="_blank">Anitube(Legendado)</a>
+                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2" target="_blank"><p class="anitube">Anitube</p>(Legendado)</a>
                 <br>
-                <a href="https://rine.cloud/anime/oshi-no-ko/" target="_blank">Rine.Cloud(Legendado)</a>
+                <a href="https://rine.cloud/anime/oshi-no-ko/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Legendado)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/kenichi.png" alt="Imagem 2">
-            <div class="info">
+            <div class="descricao">
                 <h3>Shijou Saikyou no Deshi Kenichi <h3>
-                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank">Anitube(Legendado Completo)</a>
-                <a href="https://www.anitube.us/animes-dublado/shijou-saikyou-no-deshi-kenichi-dublado" target="_blank">Anitube (Dublado)</a>
+                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank"><p class="anitube">Anitube</p>(Legendado Completo)</a>
                 <br>
-                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/" target="_blank">Rine.Cloud(Dublado)</a>
+                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Dublado)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/katekyo hitman.png" alt="Imagem 3">
-            <div class="info">
+            <div class="descricao">
                 <h3>Katekyo Hitman Reborn</h3>
-                <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/" target="_blank">Rine.Cloud(Dublado)</a>
+                <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Dublado)</a>
                 <br>
-                <a href="https://www.anroll.net/a/JCxDZ7q4SO" target="_blank">AnimesROLL(Legendado Completo)</a>
+                <a href="https://www.anroll.net/a/JCxDZ7q4SO" target="_blank"><p class="animesroll">AnimesROLL</p>(Legendado Completo)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/vinland-saga01.png" alt="Imagem 4">
-            <div class="info">
+            <div class="descricao">
                 <h3>Vinland Saga Temporada 1</h3>
-                <a href="https://www.anroll.net/a/UEOIWUExzW" target="_blank">AnimesROLL(Legendado)</a>
+                <a href="https://www.anroll.net/a/UEOIWUExzW" target="_blank"><p class="animesroll">AnimesROLL</p>(Legendado)</a>
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/vinland-saga-2-temporada.png" alt="imagem 5">
-            <div class="info">
+            <div class="descricao">
                 <h3>Vinland Saga Temporada 2</h3>   
-                <a href="https://www.anroll.net/a/qjNPqmFXES" target="_blank">AnimesROLL(Dublado)</a>
+                <a href="https://www.anroll.net/a/qjNPqmFXES" target="_blank"><p class="animesroll">AnimesROLL</p>(Dublado)</a>
                 <br>
-                <a href="https://www.anroll.net/a/Md5wH2ONKP" target="_blank">AnimesROLL(Legendado)</a> 
+                <a href="https://www.anroll.net/a/Md5wH2ONKP" target="_blank"><p class="animesroll">AnimesROLL</p>(Legendado)</a> 
             </div>
         </div>
-        <!-- Adicione mais itens conforme necessário -->
     </div>
 </body>
 </html>
