--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
     <p>
         &copy Copyright 2024|Todos os Direitos Reservados a Kaích Costa
     </p>
-    <a href="https://github.com/KaichCosta">GitHub</a><img src="icon/github-mark/github-mark24x24.png" alt="github logo">
-    <p>
-        Tem alguma sugestão de alteração ou adição? Fale comigo pelo insta<a href="https://www.instagram.com/kaichcosta_07/">Kaích Costa <img src="icon/instagram-logo24x24.jpg" alt="instagram logo"></a>
+    <a class="github"href="//github.com/KaichCosta">GitHub</a><img src="icon/github-mark/github-mark24x24.png" alt="github logo">
+    <p class="sugestão">
+        Tem alguma sugestão de alteração ou adição? Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/"> Kaích Costa </a>
     </p>
-    <a class="creditos"></a>
 </footer>
 </body>
 </html>
