por que o h4 funciona css e h3 n?kkkk

--- a/animes-page.html
+++ b/animes-page.html
@@ -16,12 +16,14 @@
     kuroko no basket
     haikyuu
     vinland saga v-->
-    
+<h1>ANIMES</h1>    
+
+
     <div class="gallery-container">
         <div class="gallery-item">
             <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="Imagem 1">
             <div class="descricao">
-                <h3>Oshi no ko Tmporada 1</h3>
+                <h3>Oshi no ko Temporada 1</h3>
                 <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2" target="_blank"><p class="anitube">Anitube</p>(Legendado)</a>
                 <br>
                 <a href="https://rine.cloud/anime/oshi-no-ko/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Legendado)</a>
@@ -30,16 +32,17 @@
         <div class="gallery-item">
             <img src="imagens/img-animes/kenichi.png" alt="Imagem 2">
             <div class="descricao">
-                <h3>Shijou Saikyou no Deshi Kenichi <h3>
-                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank"><p class="anitube">Anitube</p>(Legendado Completo)</a>
+                <h4>Shijou Saikyou no Deshi Kenichi</h4>
+                <a href="https://www.anitube.us/anime/shijou-saikyou-no-deshi-kenichi" target="_blank">
+                <p class="anitube">Anitube</p>(Legendado Completo)</a>
                 <br>
-                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Dublado)</a>
+                <a href="https://rine.cloud/anime/shijou-saikyou-no-deshi-kenichi-dublado/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Dublado)</a> 
             </div>
         </div>
         <div class="gallery-item">
             <img src="imagens/img-animes/katekyo hitman.png" alt="Imagem 3">
             <div class="descricao">
-                <h3>Katekyo Hitman Reborn</h3>
+                <h4>Katekyo Hitman Reborn</h3>
                 <a href="https://rine.cloud/anime/katekyou-hitman-reborn-dublado/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Dublado)</a>
                 <br>
                 <a href="https://www.anroll.net/a/JCxDZ7q4SO" target="_blank"><p class="animesroll">AnimesROLL</p>(Legendado Completo)</a>
@@ -55,7 +58,7 @@
         <div class="gallery-item">
             <img src="imagens/img-animes/vinland-saga-2-temporada.png" alt="imagem 5">
             <div class="descricao">
-                <h3>Vinland Saga Temporada 2</h3>   
+                <h4>Vinland Saga Temporada 2</h3>   
                 <a href="https://www.anroll.net/a/qjNPqmFXES" target="_blank"><p class="animesroll">AnimesROLL</p>(Dublado)</a>
                 <br>
                 <a href="https://www.anroll.net/a/Md5wH2ONKP" target="_blank"><p class="animesroll">AnimesROLL</p>(Legendado)</a> 
