--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
     <p>
         &copy Copyright 2024|Todos os Direitos Reservados a Kaích Costa
     </p>
-    <a class="github"href="//github.com/KaichCosta">GitHub</a><img src="icon/github-mark/github-mark24x24.png" alt="github logo">
+    <a class="github" href="//github.com/KaichCosta">GitHub</a>
+    <img src="icon/github-mark/github-mark24x24.png" alt="github logo">
     <p class="sugestão">
         Tem alguma sugestão de alteração ou adição? Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/"> Kaích Costa </a>
     </p>
