faltou configurar de novo o footer, o resto ta (pronto)

--- a/index.html
+++ b/index.html
@@ -79,13 +79,17 @@
     </main>
 
 <footer>
+    
+    
+    <!--<a class="github" href="//github.com/KaichCosta">GitHub <img src="icon/github-mark/github-mark24x24.png" alt="github logo">
+    </a>-->
+
+    <p class="sugestão">
+        <br><br>Tem alguma sugestão de alteração ou adição? <br> Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/"> Kaích Costa </a>
+    </p>
+
     <p>
         &copy Copyright 2024|Todos os Direitos Reservados a Kaích Costa
-    </p>
-    <a class="github" href="//github.com/KaichCosta">GitHub</a>
-    <img src="icon/github-mark/github-mark24x24.png" alt="github logo">
-    <p class="sugestão">
-        Tem alguma sugestão de alteração ou adição? Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/"> Kaích Costa </a>
     </p>
 </footer>
 </body>
