voltei o oshi no ko temporada 1 que tirei sem querer

--- a/animes-page.html
+++ b/animes-page.html
@@ -108,6 +108,16 @@
         </div>
 
         <div class="gallery-item">
+            <img src="imagens/img-animes/ai-oshi-no-ko.png" alt="Imagem 1">
+            <div class="descricao">
+                <h4>Oshi no ko Temporada 1</h4>
+                <a href="https://www.anitube.us/anime/80580b948346e410fdfec6df274eaa398a4e2fe2" target="_blank"><p class="anitube">Anitube</p>(Legendado)</a>
+                <br>
+                <a href="https://rine.cloud/anime/oshi-no-ko/" target="_blank"><p class="rinecloud">Rine.Cloud</p>(Legendado)</a>
+            </div> 
+        </div>
+        
+        <div class="gallery-item">
             <img src="imagens/img-animes/oshi-no-ko-2-temp.png" alt="Imagem 6">
             <div class="descricao">
                 <h4>Oshi no ko Temporada 2</h4>
