coloquei target blank no link pro insta

--- a/animes-page.html
+++ b/animes-page.html
@@ -190,7 +190,7 @@
     </a>-->
 
     <p class="sugestão">
-        <br><br>Tem alguma sugestão de alteração ou adição? <br> Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/"> Kaích Costa </a>
+        <br><br>Tem alguma sugestão de alteração ou adição? <br> Fale comigo pelo insta<a class="insta" href="https://www.instagram.com/kaichcosta_07/" target="_blank"> Kaích Costa </a>
     </p>
 
     <p>
